--- a/MifareReaderApp/MifareReaderApp.csproj
+++ b/MifareReaderApp/MifareReaderApp.csproj
@@ -15,6 +15,12 @@
 
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.IO.Ports" Version="7.0.0" />
   </ItemGroup>
 
@@ -29,6 +35,8 @@
 
   <ItemGroup>
     <Folder Include="Commands\" />
+    <Folder Include="Models\Interfaces\" />
+    <Folder Include="Stuff\Extenstions\" />
   </ItemGroup>
 
 </Project>
