--- a/MifareReaderApp/MifareReaderApp.csproj
+++ b/MifareReaderApp/MifareReaderApp.csproj
@@ -6,11 +6,16 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>card.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Resources\db.png" />
     <None Remove="Resources\port.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="card.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +26,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NPOI" Version="2.6.2" />
     <PackageReference Include="System.IO.Ports" Version="7.0.0" />
   </ItemGroup>
 
@@ -35,6 +41,12 @@
 
   <ItemGroup>
     <Folder Include="Commands\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\card.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
