--- a/MifareReaderApp/MifareReaderApp.csproj
+++ b/MifareReaderApp/MifareReaderApp.csproj
@@ -10,6 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Commands\**" />
+    <EmbeddedResource Remove="Commands\**" />
+    <None Remove="Commands\**" />
+    <Page Remove="Commands\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Resources\db.png" />
     <None Remove="Resources\port.png" />
   </ItemGroup>
@@ -37,10 +44,6 @@
     <Resource Include="Resources\port.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands\" />
   </ItemGroup>
 
   <ItemGroup>
